<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_shape"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".VerificationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/img"
            android:layout_gravity="left"/>

        <ImageView
            android:layout_width="200dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:contentDescription="@string/splashscreen"
            android:layout_height="250dp"
            android:layout_marginTop="-40dp"
            android:src="@drawable/splashscreen_image" />

        <TextView
            android:text="@string/phone_verification"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#416158"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/We_will_send_a"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="#2e2421"
                android:layout_marginEnd="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/one_time_password"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#2e2421"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:text="@string/to_the_phone_number_you_provide"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="#2e2421"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp"
                android:background="@color/white"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/round_input"
                    android:ems="1"
                    android:hint="@string/enter_your_phone_number"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textColor="#787878"
                    android:textSize="12sp"
                    android:textStyle="normal"/>
                <Button
                    android:id="@+id/sendotpBtn"
                    android:text="@string/send_otp"
                    android:textStyle="bold|normal"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/round_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>